Fixed File_Info on load existing and added context menu

--- a/data/startup/known_types.conf
+++ b/data/startup/known_types.conf
@@ -7,6 +7,11 @@
   <Type>c</Type>
  </Filter>
  <Filter>
+  <Name>Header</Name>
+  <Type>h</Type>
+  <Type>hpp</Type>
+ </Filter>
+ <Filter>
   <Name>Other</Name>
   <Type>txt</Type>
   <Type>nfo</Type>
