Added second page new file dialog, save project and more...

--- a/data/startup/known_types.conf
+++ b/data/startup/known_types.conf
@@ -13,7 +13,15 @@
  </Filter>
  <Filter>
   <Name>Other</Name>
-  <Type>txt</Type>
+  <Type>conf</Type>
+  <Type>ini</Type>
   <Type>nfo</Type>
+  <Type>txt</Type>
+ </Filter>
+ <Filter>
+  <Name>GFX</Name>
+  <Type>bmp</Type>
+  <Type>jpg</Type>
+  <Type>png</Type>
  </Filter>
 </known_types.conf>
